Resolvido  integração com ItemEdit